// Placeholder types matching proto definition

export enum GrpcNotificationChannel {
  NOTIFICATION_CHANNEL_UNSPECIFIED = 0,
  NOTIFICATION_CHANNEL_EMAIL = 1,
  NOTIFICATION_CHANNEL_SMS = 2,
  NOTIFICATION_CHANNEL_PUSH = 3,
}

export enum GrpcNotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0,
  NOTIFICATION_TYPE_TRANSFER_CREATED = 1,
  NOTIFICATION_TYPE_TRANSFER_AWAITING_FUNDS = 2,
  NOTIFICATION_TYPE_TRANSFER_FUNDS_RECEIVED = 3,
  NOTIFICATION_TYPE_TRANSFER_PROCESSING = 4,
  NOTIFICATION_TYPE_TRANSFER_COMPLETED = 5,
  NOTIFICATION_TYPE_TRANSFER_FAILED = 6,
  NOTIFICATION_TYPE_TRANSFER_REFUNDED = 7,
  NOTIFICATION_TYPE_PICKUP_CODE_READY = 8,
  NOTIFICATION_TYPE_PICKUP_REMINDER = 9,
  NOTIFICATION_TYPE_PICKUP_COLLECTED = 10,
  NOTIFICATION_TYPE_WELCOME = 11,
  NOTIFICATION_TYPE_KYC_APPROVED = 12,
  NOTIFICATION_TYPE_KYC_REJECTED = 13,
  NOTIFICATION_TYPE_PASSWORD_RESET = 14,
  NOTIFICATION_TYPE_LOGIN_ALERT = 15,
}

export enum GrpcDeliveryStatus {
  DELIVERY_STATUS_UNSPECIFIED = 0,
  DELIVERY_STATUS_PENDING = 1,
  DELIVERY_STATUS_SENT = 2,
  DELIVERY_STATUS_DELIVERED = 3,
  DELIVERY_STATUS_FAILED = 4,
  DELIVERY_STATUS_BOUNCED = 5,
}
